# Red-Barn-Robotics

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  result.json  tracking_output.json
src/: detection.rs  lib.rs  main.rs  track.rs  tracker.rs  visualize.rs
test_data/: frames_100.json  input_data.json
tests/: integration.rs
