[package]
name = "crop_tracking_system"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
time = { version = "0.3.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
image = "0.25.6"
imageproc = "0.25.0"
rusttype = "0.9.3"
ab_glyph = "0.2"
